--- a/index.html
+++ b/index.html
@@ -18,35 +18,31 @@
   <section class="hero">
     <div class="hero-content">
       <h1>DOGS LOVER</h1>
-      <p> I'M so happy to share with you this experience I have with dogs.</p>
+      <p> I'M so happy to share with you this expriance I have with dogs.</p>
       <button>Sign up</button>
     </div>
     <div class="hero-image">
-      <!-- Replace with an online image link -->
-      <img src="https://via.placeholder.com/600x400?text=Happy+Dog" alt="Hero Image" />
+      <img src="c:\Users\LOYAL\OneDrive\Pictures\DCIM\IMG-20200713-WA0030.jpg" alt="Hero Image" />
     </div>
   </section>
   <section class="info">
     <h2>Some random information.</h2>
     <div class="boxes">
       <div class="box">
-        <!-- Replace with an online image link -->
-        <img src="https://via.placeholder.com/300x200?text=Simba4" alt="Information Image 1" />
+        <img src="download (2).jpeg" alt="Information Image 1" />
         <p>Simba4</p>
       </div>
       <div class="box">
-        <!-- Replace with an online image link -->
-        <img src="https://via.placeholder.com/300x200?text=Puppy" alt="Information Image 2" />
+  
+        <img src="download (3).jpeg" alt="Information Image 2" />
         <p>puppy</p>
       </div>
       <div class="box">
-        <!-- Replace with an online image link -->
-        <img src="https://via.placeholder.com/300x200?text=Nora" alt="Information Image 3" />
+        <img src="download (4).jpeg" alt="Information Image 3" />
         <p>Nora</p>
       </div>
       <div class="box">
-        <!-- Replace with an online image link -->
-        <img src="https://via.placeholder.com/300x200?text=Molly" alt="Information Image 4" />
+        <img src="download (5).jpeg" alt="Information Image 4" />
         <p>Molly</p>
       </div>
     </div>
@@ -54,14 +50,15 @@
 
   <section class="quote-section">
     <p>"Since adopting a dog, our family has been filled with more laughter, love, and endless adventures. We couldn’t imagine life without our furry friend!"</p>
-  </section>
+</section>
 
-  <div class="cta">
-    <div class="cta-content">
-      <p class="cta-title"> How do you think it can feel to have your own puppy?</p>
-      <button class="cta-button">Sign up</button>
-    </div>
+
+<div class="cta">
+  <div class="cta-content">
+    <p class="cta-title"> how do you think it can feel to have your own puppy?</p>
+    <button class="cta-button">Sign up</button>
   </div>
+</div>
 
   <footer>
     <p>Copyright © Pawpals 2024</p>
