--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <button>Sign up</button>
     </div>
     <div class="hero-image">
-      <img src="https://github.com/Nadette-13/Webddesign/blob/main/golden-retriever-tongue-out.jpg" alt="Hero Image" />
+      <img src="golden-retriever-tongue-out.jpg" alt="Hero Image" />
     </div>
   </section>
   <section class="info">
