--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <button>Sign up</button>
     </div>
     <div class="hero-image">
-      <img src="c:\Users\LOYAL\OneDrive\Pictures\DCIM\IMG-20200713-WA0030.jpg" alt="Hero Image" />
+      <img src="IMG-20200713-WA0030.jpg" alt="Hero Image" />
     </div>
   </section>
   <section class="info">
