--- a/index.html
+++ b/index.html
@@ -5,6 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>our beloved dogs</title>
   <link rel="stylesheet" href="css assign.css">
+  <style>
+    /* Styling for the button to ensure the text fits on one line */
+    .cta-button {
+      padding: 10px 20px;  /* Adjust the padding to make the button more compact */
+      font-size: 16px;     /* Reduce the font size if necessary */
+      white-space: nowrap; /* Prevent the text from wrapping */
+      text-align: center;  /* Center the text */
+      border: none;
+      background-color: #4CAF50; /* Green background for the button */
+      color: white;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+
+    .cta-button:hover {
+      background-color: #45a049; /* Slightly darker green on hover */
+    }
+
+    /* Styling for the footer */
+    footer {
+      background-color: #003366; /* Dark blue background color */
+      color: white;               /* White text color */
+      text-align: center;         /* Center the text */
+      padding: 20px;              /* Padding for spacing around the text */
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -18,7 +44,7 @@
   <section class="hero">
     <div class="hero-content">
       <h1>DOGS LOVER</h1>
-      <p> I'M so happy to share with you this expriance I have with dogs.</p>
+      <p> I'M so happy to share with you this experience I have with dogs.</p>
       <button>Sign up</button>
     </div>
     <div class="hero-image">
@@ -33,7 +59,6 @@
         <p>Simba4</p>
       </div>
       <div class="box">
-  
         <img src="download (3).jpeg" alt="Information Image 2" />
         <p>puppy</p>
       </div>
@@ -50,15 +75,15 @@
 
   <section class="quote-section">
     <p>"Since adopting a dog, our family has been filled with more laughter, love, and endless adventures. We couldn’t imagine life without our furry friend!"</p>
-</section>
+  </section>
 
-
-<div class="cta">
-  <div class="cta-content">
-    <p class="cta-title"> how do you think it can feel to have your own puppy?</p>
-    <button class="cta-button">Sign up</button>
+  <div class="cta">
+    <div class="cta-content">
+      <p class="cta-title"> How do you think it can feel to have your own puppy?</p>
+      <!-- "Sign up" button -->
+      <button class="cta-button">Sign up</button>
+    </div>
   </div>
-</div>
 
   <footer>
     <p>Copyright © Pawpals 2024</p>
