--- a/index.html
+++ b/index.html
@@ -6,35 +6,19 @@
   <title>our beloved dogs</title>
   <link rel="stylesheet" href="css assign.css">
   <style>
-    /* Styling for the button to ensure the text fits on one line */
-    .cta-button {
-      padding: 10px 20px;  /* Adjust the padding to make the button more compact */
-      font-size: 16px;     /* Reduce the font size if necessary */
-      white-space: nowrap; /* Prevent the text from wrapping */
-      text-align: center;  /* Center the text */
-      border: none;
-      background-color: #4CAF50; /* Green background for the button */
-      color: white;
-      cursor: pointer;
-      border-radius: 5px;
-    }
-
-    .cta-button:hover {
-      background-color: #45a049; /* Slightly darker green on hover */
-    }
-
-    /* Styling for the footer */
-    footer {
-      background-color: #003366; /* Dark blue background color */
-      color: white;               /* White text color */
-      text-align: center;         /* Center the text */
-      padding: 20px;              /* Padding for spacing around the text */
+    /* Logo styling */
+    .logo img {
+      max-width: 200px;  /* Set a max width for the logo to fit well in the header */
+      height: auto;      /* Maintain aspect ratio */
     }
   </style>
 </head>
 <body>
   <header>
-    <h1 class="logo">pawpals</h1>
+    <div class="logo">
+      <!-- Replace this text with your logo image -->
+      <img src="" alt="Pawpals Logo" />
+    </div>
     <nav>
       <a href="#">Mfuranzima</a>
       <a href="#">Nadette</a>
@@ -80,7 +64,6 @@
   <div class="cta">
     <div class="cta-content">
       <p class="cta-title"> How do you think it can feel to have your own puppy?</p>
-      <!-- "Sign up" button -->
       <button class="cta-button">Sign up</button>
     </div>
   </div>
