--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header>
     <div class="logo">
       <!-- Replace this text with your logo image -->
-      <img src="" alt="Pawpals Logo" />
+      <img src="paw logo.jpeg" alt="Pawpals Logo" />
     </div>
     <nav>
       <a href="#">Mfuranzima</a>
