--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
   <style>
     /* Logo styling */
     .logo img {
-      max-width: 200px; /* Set a max width for the logo */
-      height: auto;     /* Maintain aspect ratio */
-      display: block;   /* Removes extra space below the image */
-      margin: 0 auto;   /* Centers the logo horizontally */
+      width: 30px; /* Set to smallest width (you can adjust as needed) */
+      height: auto; /* Maintain aspect ratio */
     }
-
+    
     /* Optional: Styling for the header */
     header {
       display: flex;
@@ -33,7 +31,7 @@
       color: #007BFF; /* Hover effect for links */
     }
 
-    /* Other general styling */
+    /* Footer */
     footer {
       background-color: #003366; /* Dark blue background for footer */
       color: white;              /* White text color */
@@ -54,7 +52,7 @@
       <a href="#">22831</a>
     </nav>
   </header>
-  
+
   <section class="hero">
     <div class="hero-content">
       <h1>DOGS LOVER</h1>
