--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
   <style>
     /* Logo styling */
     .logo img {
-      width: 30px; /* Set to smallest width (you can adjust as needed) */
-      height: auto; /* Maintain aspect ratio */
+      max-width: 20px; /* Set a max width for the logo */
+      height: auto;     /* Maintain aspect ratio */
+      display: block;   /* Removes extra space below the image */
+      margin: 0 auto;   /* Centers the logo horizontally */
     }
-    
+
     /* Optional: Styling for the header */
     header {
       display: flex;
@@ -31,7 +33,7 @@
       color: #007BFF; /* Hover effect for links */
     }
 
-    /* Footer */
+    /* Other general styling */
     footer {
       background-color: #003366; /* Dark blue background for footer */
       color: white;              /* White text color */
@@ -52,7 +54,7 @@
       <a href="#">22831</a>
     </nav>
   </header>
-
+  
   <section class="hero">
     <div class="hero-content">
       <h1>DOGS LOVER</h1>
