--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
   <style>
     /* Logo styling */
     .logo img {
-      max-width: 200px;  /* Set a max width for the logo to fit well in the header */
-      height: auto;      /* Maintain aspect ratio */
+      max-width: 200px;  
+      height: auto;      
     }
   </style>
 </head>
 <body>
   <header>
     <div class="logo">
-      <!-- Replace this text with your logo image -->
       <img src="paw logo.jpeg" alt="Pawpals Logo" />
     </div>
     <nav>
