--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <style>
     /* Logo styling */
     .logo img {
-      max-width: 200px;  
-      height: auto;      
+      max-width: 50px;  
+      height: 50;      
     }
   </style>
 </head>
