--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
       <img src="paw logo.jpeg" alt="Pawpals Logo" />
     </div>
     <nav>
-      <a href="#">Mfuranzima</a>
-      <a href="#">Nadette</a>
-      <a href="#">22831</a>
+      <a href="merci.html">Mfuranzima</a>
+      <a href="gracias.htm">Nadette</a>
+      <a href="english.html">22831</a>
     </nav>
   </header>
   
