--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     </div>
     <nav>
       <a href="merci.html">Mfuranzima</a>
-      <a href="gracias.htm">Nadette</a>
-      <a href="english.html">22831</a>
+      <a href="gracias.html">Nadette</a>
+      <a href="English.html">22831</a>
     </nav>
   </header>
   
