--- a/merci.html
+++ b/merci.html
@@ -1,1 +1,48 @@
 
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Merci!</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 50px;
+    }
+    h1 {
+      color: #007BFF;
+    }
+    p {
+      font-size: 20px;
+    }
+    header {
+      background-color: #f0f0f0;
+      padding: 10px;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    nav a {
+      margin: 0 15px;
+      text-decoration: none;
+      color: #007BFF;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <nav>
+      <a href="merci.html">Français</a>
+      <a href="gracias.htm">Español</a>
+      <a href="english.html">English</a>
+    </nav>
+  </header>
+
+  <h1>Merci!</h1>
+  <p>Nous vous remercions pour votre visite. Passez une excellente journée!</p>
+</body>
+</html>
